--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,6 +10,9 @@ body {
 	font-family: HelveticaNeue-Light, Verdana, sans-serif;
 	background-image: url('../img/background.jpg');
 }
+#dummyinput { /* For hiding keyboard in iOS5 */
+	opacity: 0;
+}
 /** Generics **/
 .stroke { /* Give a outline to the text */
 	text-shadow: -1px -1px 0 rgba(0,0,0,0.6), 1px -1px 0 rgba(0,0,0,0.6), -1px 1px 0 rgba(0,0,0,0.6), 1px 1px 0 rgba(0,0,0,0.6);
